update startup.sh